--- a/Saitynai/appsettings.json
+++ b/Saitynai/appsettings.json
@@ -14,5 +14,12 @@
   },
 
   "AllowedHosts": "*",
+  "Jwt": {
+   // "Key": "SecretKey",
+    "Issuer": "authServer",
+    "Audience": "resourceServer",
+    "Secret":  "MiaumiauMiau125",
+    "TokenLifeTime": "3600"
+  },
   "MongoUri": "mongodb+srv://saitynai:saitynai@cluster0.k43li.mongodb.net/SaitynaiLab?retryWrites=true&w=majority"
 }
